--- a/RestAPI/src/main/resources/application.properties
+++ b/RestAPI/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/bookie
+spring.datasource.url=jdbc:postgresql://localhost:5432/bookreview
 spring.datasource.username=
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
