--- a/RestAPI/src/main/resources/application.properties
+++ b/RestAPI/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/bookreview
+spring.datasource.url=jdbc:postgresql://localhost:5432/book
 spring.datasource.username=
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.batch.job.enabled=false
+server.error.include-message=always
