Connecting to Remote MySQL

--- a/RestAPI/src/main/resources/application.properties
+++ b/RestAPI/src/main/resources/application.properties
@@ -1,9 +1,13 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/book
-spring.datasource.username=
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://angelinne.com:3306/angel1_CENTeamProject
+spring.datasource.username=angel1_admin
+spring.datasource.password=9@;]*a*8XZrf
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-spring.batch.job.enabled=false
-server.error.include-message=always
+spring.sql.init.platform=mysql
+spring.sql.init.mode=always
+
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
