--- a/RestAPI/src/main/resources/application.properties
+++ b/RestAPI/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/book
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/books
+spring.datasource.username=root
+spring.datasource.password=Spiderman11
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.batch.job.enabled=false
 server.error.include-message=always
